--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ $("[name='search_btn']").click(function(event) {
   </div>
 <div class="copyrights_c">
 <div class="m_icon"><a href="Brand/Brand5/index.htm" target="_blank" title="微信公众号"><i class="icon iconfont icon-wechat-copy" style="font-size:18px;float:  left;margin-top:-3px;" ></i>微信公众号</a></div>
-<div class="copyrights_certificate"><a href="https://airportal.cn" target="_blank" title="隔空投送">湘ICP备2023015572号-1</a>　<a href="https://notes.lightxi.com" title="便签">王颖少年·无限进步</a>　<a href="https://www.pcloud.com" title="网盘">Copyright © wangying.eu.org. All Rights Reserved.</a></div>
+<div class="copyrights_certificate"><a href="https://www.wenshushu.cn/" target="_blank" title="隔空投送">湘ICP备2023015572号-1</a>　<a href="https://notes.lightxi.com" title="便签">王颖少年·无限进步</a>　<a href="https://www.pcloud.com" title="网盘">Copyright © wangying.eu.org. All Rights Reserved.</a></div>
 
 </div>
 </div>
@@ -292,7 +292,7 @@ $("[name='search_btn']").click(function(event) {
 		<!--[if !IE]><!-->
 		<div class="copyright">
 			<p style="margin: 0 0 0.2em;width:70%; padding-right: 10px;padding-left: 12px;">
-				<a href="https://airportal.cn" target="_blank" style="color: #ababab;">湘ICP备2023015572号-1</a>
+				<a href="https://www.wenshushu.cn/" target="_blank" style="color: #ababab;">湘ICP备2023015572号-1</a>
 			</p>
 			<p style="width: 280px;padding-left: 12px;">
 				Copyright © wangying.eu.org. 版权所有.
